[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
exclude.workspace = true

[dependencies]
rayls-network-cli = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
rayls-middleware-orchestrator = { workspace = true }
rayls-infrastructure-config = { workspace = true, features = ["test-utils"]}
rayls-infrastructure-types = { workspace = true, features = ["test-utils"] }
tracing = { workspace = true }
rayls-execution-faucet = { workspace = true, optional = true }
rayls-execution-evm = { workspace = true, features = ["test-utils"] }
rayls-execution-rpc = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }
futures = { workspace = true, optional = true }
escargot = { workspace = true }

[dev-dependencies]
reth = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
rand_chacha = { workspace = true }
alloy = { workspace = true }
rand = { workspace = true }

# Used for integration testing.
ethereum-tx-sign = "6.1.3"
const-hex = "1.12.0"

# faucet-specific
gcloud-sdk = { version = "=0.24.6", default-features = false, features = [
    "google-cloud-kms-v1",
    "tls-webpki-roots",
] }
k256 = "0.13.3"
tonic = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand",
    "recovery",
] }

[features]
default = []
faucet = ["dep:rayls-execution-faucet", "dep:futures"]
# Compile the dev-mode e2e test (tests/it/dev.rs); enables `rayls-network-cli`'s
# `dev-single-node-setup` feature and builds the test binary with it.
dev-single-node-setup = ["rayls-network-cli/dev-single-node-setup"]

[lints]
workspace = true
