[package]
name = "fuzz-targets"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"
publish = false
description = "Fuzz testing harness helpers for Axyl protocol types."

# This crate is NOT a workspace member — it is used by the fuzz/ sub-crate
# which is managed by cargo-fuzz and has its own dependency resolution.

[dependencies]
rayls-infrastructure-types = { path = "../../infrastructure/types" }
eyre = "0.6"
