[package]
name = "rayls-batch-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = [
]

[dependencies]
rayls-infrastructure-types = { workspace = true }
rayls-execution-evm = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# unit tests
assert_matches = { workspace = true }
tempfile = { workspace = true }
rayls-execution-evm = { workspace = true, features = ["test-utils"] }

# integration tests
rayls-consensus-worker = { workspace = true, features = ["test-utils"] }
rayls-infrastructure-network-types = { workspace = true }
rayls-infrastructure-storage = { workspace = true }
rayls-batch-validator = { workspace = true }
rayls-middleware-processor = { workspace = true }
rayls-batch-builder = { workspace = true, features = ["test-utils"] }

[features]
default = []
test-utils = []

[lints]
workspace = true